Add user type
